<resources>
    <string name="app_name">高速公路设施管理</string>
    <string name="Welcome">用户登录</string>
    <string name="Username_hint">请输入用户名</string>
    <string name="Password_hint">请输入密码</string>
    <string name="Email_hint">请输入邮箱地址</string>
    <string name="login_button">登录</string>
    <string name="login_fail">用户名或密码错误！</string>
    <string name="register_new">注册新用户</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="Rem_pwd">记住密码</string>
    <string name="Auto_login">自动登录</string>
    <drawable name="clr_normal">#ff6501</drawable>
    <drawable name="clr_pressed">#a44100</drawable>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码 </string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_username">用户名不合法</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="manager_equipment">管理设备</string>
    <string name="look_equipment">查看设备</string>
    <string name="show_log">设备记录</string>
    <string name="tools">其他工具</string>
    <string name="set_user">设置用户</string>
    <string name="log_out">退出登录</string>

    <string name="switch_button">栏杆机开关：</string>
    <string name="equipment">栏杆机状态</string>

    <string name="ID">ID:  </string>
    <string name="nodename">栏杆机名:</string>
    <string name="roadname">所处公路:</string>
    <string name="port">端 口:</string>
    <string name="area">区  域:</string>
    <string name="address">地  址:</string>
    <string name="Longitude">经  度:</string>
    <string name="Latitude">纬  度:</string>
    <string name="type">类  型:</string>
    <string name="state">状  态:</string>
    <string name="comm_state">通信状态:</string>
    <string name="battery_state">电池状态:</string>
</resources>
