<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.highway.LoginActivity"
    android:background="@mipmap/background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/WelcomeLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/WelcomeLogo"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="#ff339999"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_Username"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/et"
                android:hint="@string/Username_hint"
                android:inputType="text"
                android:paddingLeft="10dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/et_Password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/et"
            android:hint="@string/Password_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmail"
            android:background="@drawable/et"
            android:hint="@string/Email_hint"
            android:visibility="gone"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout01"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_selector"
        android:text="@string/login_button"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_login"
        android:paddingTop="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <Button
        android:text="@string/register_new"
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/register"
        android:textColor="@android:color/white"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <Button
        android:text="@string/register"
        android:id="@+id/register_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_selector"
        android:textColor="@android:color/white"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:visibility="gone"/>


</RelativeLayout>
