<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.highway.MainActivity"
    tools:showIn="@layout/app_bar_main">


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearFragment"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/ID"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginLeft="15dp"/>
            <Spinner
                android:layout_weight="0.3"
                android:id="@+id/equipment_id"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/nodename"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/nodename"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginRight="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/Longitude"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/equipment_Lng"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/Latitude"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/equipment_Lat"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginRight="15dp" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/equipment_type"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/equipment_state"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/comm_state"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/comm_state"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/battery_state"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/battery_state"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/port"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/roadname"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/roadname"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/area"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.2"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"/>
            <TextView
                android:layout_weight="0.3"
                android:id="@+id/address"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:textColor="@color/wordColor"
                android:layout_marginRight="15dp"/>
        </LinearLayout>

        <RelativeLayout
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_font_size"
                android:text="@string/switch_button"
                android:textColor="#3c3c3c"
                android:id="@+id/switch_button2"
                android:checked="false"
                android:layout_alignParentTop="true" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>